# Tech-Trends-

./: .bruin.yml  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backfill.yml
dbt/: dbt_project.yml
dbt/models/marts/: fct_daily_summary.sql  fct_hourly_activity.sql  fct_repo_activity.sql
dbt/models/staging/: sources.yml  stg_github_events.sql
github-pipeline/: pipeline.yml
github-pipeline/assets/: fct_daily_summary.sql  fct_hourly_activity.sql  fct_repo_activity.sql  ingest_github.py  load_to_bigquery.py  stg_github_events.sql
ingestion/: gcs_to_bigquery.py  github_ingest.py  requirements.txt  stackoverflow_ingest.py
kestra/flows/: github_pipeline.yml
logs/runs/github-tech-trends/: 2026_03_16_23_55_27.json  2026_03_17_00_03_17.json  2026_03_17_00_05_31.json  2026_03_17_00_06_47.json  2026_03_17_00_07_47.json  2026_03_17_00_25_19.json  2026_03_17_00_33_14.json
terraform/: main.tf  outputs.tf  terraform.tfstate  variables.tf
